refactor(protocol): standardize client-server request response flow - introduce generic Request and Response envelopes - split auth, auction, and bid protocol payloads - add DTOs for auction summary/detail, bid, and user session data - route server requests through auth and auction controllers - update JavaFX controllers to use the new protocol contract
BREAKING CHANGE: client-server messages no longer use legacy AuthRequest/AuthResponse and AuctionResponse directly.